# mnemos-bridge-anthropic

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/mnemos_bridge_anthropic/: __init__.py  adapter.py
tests/: conftest.py  test_handle_tool_use_offline.py  test_translator_offline.py
tests/integration/: test_anthropic_tool_loop.py
