[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemos-bridge-anthropic"
version = "0.1.0"
description = "Anthropic adapter for exposing MNEMOS MCP tools to Claude tool-using agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "MNEMOS" },
]
dependencies = [
  "mnemos-bridge-core>=0.1.0",
  "anthropic>=0.40",
  "httpx>=0.27",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that call live Anthropic and MNEMOS MCP services",
]

[tool.ruff]
line-length = 100
target-version = "py311"
